--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -43,6 +43,12 @@
                         <TextBlock HorizontalAlignment="Center" Text="Display"/>
                     </StackPanel>
                 </ListBoxItem>
+                <ListBoxItem x:Name="listboxitem_Multimedia" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <StackPanel>
+                        <Image HorizontalAlignment="Center" Source="/Assets/Multimedia.png" Width="50" Height="50"/>
+                        <TextBlock HorizontalAlignment="Center" Text="Multimedia"/>
+                    </StackPanel>
+                </ListBoxItem>
                 <ListBoxItem x:Name="listboxitem_Info" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                     <StackPanel>
                         <Image HorizontalAlignment="Center" Source="/Assets/Information.png" Width="50" Height="50"/>
@@ -677,8 +683,35 @@
                             </StackPanel>
                         </StackPanel>
 
-                        <!-- Info -->
-                        <Grid x:Name="stackpanel_Info" Visibility="Collapsed">
+                        <!-- Multimedia -->
+                        <StackPanel x:Name="stackpanel_Multimedia" Visibility="Collapsed">
+                            <TextBlock Text="Video Options" FontSize="20" FontWeight="Medium"/>
+
+                            <!-- Video Super Resolution -->
+                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Video Super Resolution improves video playback quality by upscaling the video."/>
+                                <ToggleSwitch x:Name="toggleswitch_VideoSuperResolution" Margin="10,0,0,0" OffContent="AMD Video Super Resolution" OnContent="AMD Video Super Resolution" Toggled="toggleswitch_VideoSuperResolution_Toggled"/>
+                            </StackPanel>
+
+                            <!-- Video Upscale -->
+                            <Border Margin="0,10,0,0" Padding="5" CornerRadius="8" Background="{ThemeResource ApplicationVoidGrayColor}">
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="Video upscale improves video playback quality by applying sharpening on the upscaled video."/>
+                                        <ToggleSwitch x:Name="toggleswitch_VideoUpscale" Margin="10,0,0,0" OffContent="Video Upscale" OnContent="Video Upscale" Toggled="toggleswitch_VideoUpscale_Toggled"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Sharpening" VerticalAlignment="Center"/>
+                                        <TextBox x:Name="textbox_VideoUpscale_Sharpening" Margin="5,0,0,0" Text="{Binding ElementName=slider_VideoUpscale_Sharpening, Path=Value}" Style="{ThemeResource ApplicationTextBoxReadOnly}"/>
+                                        <Slider x:Name="slider_VideoUpscale_Sharpening" Width="150" Margin="10,0,10,0" ValueChanged="slider_VideoUpscale_Sharpening_ValueChanged"/>
+                                        <TextBlock Text="%" VerticalAlignment="Center"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+
+                        <!-- Information -->
+                        <Grid x:Name="stackpanel_Information" Visibility="Collapsed">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="Auto"/>
