--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -186,8 +186,8 @@
                             </Border>
 
                             <!-- Radeon Sharpen Desktop -->
-                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal" Visibility="Collapsed">
-                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="When AMD Radeon Image sharpening is enabled and Sharpen Desktop is enabled, the sharpening is applied for both windowed applications and for applications that run in fullscreen exclusive mode.&#10;&#10;When AMD Radeon Image sharpening is enabled and Sharpen Desktop is disabled, the sharpening is only applied to applications that run in fullscreen exclusive mode.&#10;&#10;When AMD Radeon™ Image sharpening is disabled and Sharpen Desktop is enabled, Sharpen Desktop remains in enabled state, but the value is ignored."/>
+                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="When AMD Radeon Image sharpening is enabled and Sharpen Desktop is enabled, the sharpening is applied for both windowed applications and for applications that run in fullscreen exclusive mode.&#10;&#10;When AMD Radeon Image sharpening is enabled and Sharpen Desktop is disabled, the sharpening is only applied to applications that run in fullscreen exclusive mode."/>
                                 <ToggleSwitch x:Name="toggleswitch_RadeonSharpenDesktop" Margin="10,0,0,0" OffContent="Radeon Sharpen Desktop" OnContent="Radeon Sharpen Desktop" Toggled="toggleswitch_RadeonSharpenDesktop_Toggled"/>
                             </StackPanel>
 
@@ -555,6 +555,12 @@
                             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
                                 <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="AMD FreeSync technology synchronizes the refresh rate of a display with the framerate of AMD FreeSync compatible graphics card to deliver dynamic refresh rate.&#10;&#10;AMD FreeSync technology reduces or eliminates visual artifacts, input latency, screen tearing and stuttering during gaming and video playback."/>
                                 <ToggleSwitch x:Name="toggleswitch_FreeSync" Margin="10,0,0,0" OffContent="AMD FreeSync" OnContent="AMD FreeSync" Toggled="toggleswitch_FreeSync_Toggled"/>
+                            </StackPanel>
+
+                            <!-- FreeSync Color Accuracy-->
+                            <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="When enabled, FreeSync Color Accuracy activates the AMD FreeSync Premium Pro HDR media profile for the display for optimal color accuracy when viewing HDR content. When disabled, it activates the HDR10 media profile for the display."/>
+                                <ToggleSwitch x:Name="toggleswitch_FreeSyncColorAccuracy" Margin="10,0,0,0" OffContent="AMD FreeSync Color Accuracy" OnContent="AMD FreeSync Color Accuracy" Toggled="toggleswitch_FreeSyncColorAccuracy_Toggled"/>
                             </StackPanel>
 
                             <!-- Virtual Super Resolution -->
