- Added application version check code.

--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -827,7 +827,7 @@
                             <StackPanel Grid.Row="1" Orientation="Horizontal">
                                 <Button x:Name="button_Website_Project" Content="Visit Project Website" Style="{ThemeResource ApplicationButton}" Click="button_Website_Project_Click"/>
                                 <Button x:Name="button_Website_Donation" Content="Open Donation Page" Style="{ThemeResource ApplicationButton}" Margin="10,0,0,0" Click="button_Website_Donation_Click"/>
-                                <Button x:Name="button_Check_Update" Margin="10,0,0,0" IsEnabled="False" Content="Check for update" Style="{ThemeResource ApplicationButton}"/>
+                                <Button x:Name="button_Check_Update" Margin="10,0,0,0" Content="Check for update" Style="{ThemeResource ApplicationButton}" Click="button_Check_Update_Click"/>
                             </StackPanel>
                         </Grid>
                     </Grid>
