--- a/AmdDriverTool/MainPage.xaml
+++ b/AmdDriverTool/MainPage.xaml
@@ -849,7 +849,7 @@
 
                             <!-- HDCP Support -->
                             <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
-                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="If High-bandwidth Digital Content Protection (HDCP) is disabled on this display, digitally protected content may be unplayable, or played at a lower resolution."/>
+                                <Image Source="/Assets/Information.png" Width="24" Height="24" ToolTipService.ToolTip="If High-bandwidth Digital Content Protection (HDCP) is disabled on this display, digitally protected content may be unplayable, or played at a lower resolution.&#10;&#10;* System restart required to take effect."/>
                                 <ToggleSwitch x:Name="toggleswitch_HDCPSupport" Margin="10,0,0,0" OffContent="HDCP Support" OnContent="HDCP Support" Toggled="toggleswitch_HDCPSupport_Toggled"/>
                             </StackPanel>
 
@@ -946,6 +946,7 @@
                             <StackPanel Grid.Row="1" Orientation="Horizontal">
                                 <Button x:Name="button_Website_Project" Content="Visit Project Website" Style="{ThemeResource ApplicationButton}" Click="button_Website_Project_Click"/>
                                 <Button x:Name="button_Website_Donation" Content="Open Donation Page" Style="{ThemeResource ApplicationButton}" Margin="10,0,0,0" Click="button_Website_Donation_Click"/>
+                                <Button x:Name="button_Fps_Overlayer" Margin="10,0,0,0" Content="Get Fps Overlayer" Style="{ThemeResource ApplicationButton}" Click="button_Fps_Overlayer_Click"/>
                                 <Button x:Name="button_Check_Update" Margin="10,0,0,0" Content="Check for update" Style="{ThemeResource ApplicationButton}" Click="button_Check_Update_Click"/>
                             </StackPanel>
                         </Grid>
